# cryptopp-cmake

./: .appveyor.yml  .cmake-format.yaml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake-build.yml
cmake/: CPM.cmake  ConfigFiles.cmake  GetCryptoppSources.cmake  GitClone.cmake  TargetArch.cmake
cryptopp/: CMakeLists.txt  sources.cmake
test/: CMakeLists.txt
test/standard-cpm/: CMakeLists.txt  main.cpp
